--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:mock-api": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -33,8 +34,8 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
+    "json-server": "^1.0.0-beta.3",
     "vite": "^6.0.5"
   }
 }
